<!--
 | Copyright Istvan Chung and Husayn Karimi.
 |
 | This file is part of ChessSave.
 |
 | ChessSave is free software: you can redistribute it and/or modify
 | it under the terms of the GNU General Public License as published by
 | the Free Software Foundation, either version 3 of the License, or
 | (at your option) any later version.
 |
 | ChessSave is distributed in the hope that it will be useful,
 | but WITHOUT ANY WARRANTY; without even the implied warranty of
 | MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 | GNU General Public License for more details.
 |
 | You should have received a copy of the GNU General Public License
 | along with ChessSave.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/clear_board"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:showAsAction="never"
        android:title="@string/clear_board"/>
    <item
        android:id="@+id/setup_board"
        android:icon="@drawable/ic_setup_board"
        android:showAsAction="never"
        android:title="@string/setup_board"/>
    <item
        android:id="@+id/delete_saved"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/delete_saved"/>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom"
        android:title="@string/about"/>

</menu>
